--- a/Server/package.json
+++ b/Server/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon -r dotenv/config --experimental-json-modules src/index.js",
     "start": "node -r dotenv/config --experimental-json-modules src/index.js",
-    "build" : "npm install && npm install --prefix Client && npm run build --prefix Client"
+    "build" : "npm install && npm run build"
   },
   "repository": {
     "type": "git",
